overlays/uksouth-staging/olympus/skiron/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: api.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /auth_transactions_mock/mastercard
            pathType: Exact
            backend:
              service:
                name: skiron-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
